[gd_scene load_steps=13 format=3 uid="uid://bjssovxl7m1cw"]

[ext_resource type="Script" path="res://Scripts/MainMenu/MainMenuManager.gd" id="1_16dku"]
[ext_resource type="PackedScene" uid="uid://cka4heni3dqxn" path="res://Prefabs/Entities/bird.tscn" id="2_t7nxy"]
[ext_resource type="FontFile" uid="uid://bqthgjhfjkkhh" path="res://Art/Fonts/New Era Casual Bold.ttf" id="3_8n75w"]
[ext_resource type="PackedScene" uid="uid://07setvq065rx" path="res://Prefabs/Transitions/fade.tscn" id="4_psbl3"]
[ext_resource type="AudioStream" uid="uid://c6f6p5y22weoh" path="res://Art/Sounds/click.wav" id="5_l4y4e"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xvx3h"]
sky_top_color = Color(0.203922, 0.67451, 1, 1)
sky_horizon_color = Color(0.601961, 0.837255, 1, 1)
ground_bottom_color = Color(0.203922, 0.67451, 1, 1)
ground_horizon_color = Color(0.601961, 0.837255, 1, 1)

[sub_resource type="Sky" id="Sky_cikgf"]
sky_material = SubResource("ProceduralSkyMaterial_xvx3h")

[sub_resource type="Environment" id="Environment_rdgoj"]
background_mode = 1
background_color = Color(0.333333, 0.670588, 0.968627, 1)
background_energy_multiplier = 0.9
sky = SubResource("Sky_cikgf")
ambient_light_source = 3
ambient_light_sky_contribution = 0.1
reflected_light_source = 2
tonemap_mode = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3reef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_654lb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cbme"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tva8o"]

[node name="MainMenu" type="Node3D" node_paths=PackedStringArray("click_audio")]
script = ExtResource("1_16dku")
click_audio = NodePath("Audio/ClickAudio")

[node name="Background" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background"]
environment = SubResource("Environment_rdgoj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background"]
transform = Transform3D(-0.200942, 0.77474, -0.5995, -0.9796, -0.157261, 0.125116, 0.00265451, 0.612411, 0.790535, -1.00835, -1.03267, -4.92055)
shadow_bias = 10.0

[node name="Camera3D" type="Camera3D" parent="Background"]
transform = Transform3D(0.942915, 0, -0.333033, 0, 1, 0, 0.333033, 0, 0.942915, -0.505437, 0.00477815, 0.910706)
projection = 1
size = 1.1

[node name="bird" parent="Background" instance=ExtResource("2_t7nxy")]
transform = Transform3D(0.999921, -0.0121643, 0.00322155, 0.0118286, 0.995948, 0.0891487, -0.0042929, -0.0891035, 0.996013, -0.369303, -0.148491, -0.192496)
main_menu_mode = true
animation_speed = 1.3

[node name="Menu" type="Node" parent="."]

[node name="Canvas" type="CanvasLayer" parent="Menu"]

[node name="Rewarmed" type="Label" parent="Menu/Canvas"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -347.5
offset_right = 347.5
offset_bottom = 183.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.85098, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 155
text = "REWARMED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Canvas"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -352.0
offset_top = -294.0
offset_right = -52.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0

[node name="StartGame" type="Button" parent="Menu/Canvas/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(1, 0.85098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_3reef")
theme_override_styles/hover = SubResource("StyleBoxEmpty_654lb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5cbme")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tva8o")
text = "Start game"

[node name="Shadow" type="Label" parent="Menu/Canvas/VBoxContainer/StartGame"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.58
offset_top = -23.545
offset_right = 92.42
offset_bottom = 23.455
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
text = "Start game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Button" parent="Menu/Canvas/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(1, 0.85098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_3reef")
theme_override_styles/hover = SubResource("StyleBoxEmpty_654lb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5cbme")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tva8o")
text = "Settings"

[node name="Shadow" type="Label" parent="Menu/Canvas/VBoxContainer/Settings"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -15.5
offset_right = 47.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Button" parent="Menu/Canvas/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(1, 0.85098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_3reef")
theme_override_styles/hover = SubResource("StyleBoxEmpty_654lb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5cbme")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tva8o")
text = "Credits"

[node name="Shadow" type="Label" parent="Menu/Canvas/VBoxContainer/Credits"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -15.5
offset_right = 47.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
text = "Credits
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="Menu/Canvas/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_hover_color = Color(1, 0.85098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_3reef")
theme_override_styles/hover = SubResource("StyleBoxEmpty_654lb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5cbme")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tva8o")
text = "Exit"

[node name="Shadow" type="Label" parent="Menu/Canvas/VBoxContainer/Exit"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -15.5
offset_right = 47.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_8n75w")
theme_override_font_sizes/font_size = 40
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Transitions" type="Node" parent="."]

[node name="Fade" parent="Transitions" instance=ExtResource("4_psbl3")]

[node name="Audio" type="Node" parent="."]

[node name="ClickAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_l4y4e")

[connection signal="focus_entered" from="Menu/Canvas/VBoxContainer/StartGame" to="." method="_on_start_game_focus_entered"]
[connection signal="mouse_entered" from="Menu/Canvas/VBoxContainer/StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="Menu/Canvas/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="focus_entered" from="Menu/Canvas/VBoxContainer/Settings" to="." method="_on_settings_focus_entered"]
[connection signal="mouse_entered" from="Menu/Canvas/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Menu/Canvas/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="focus_entered" from="Menu/Canvas/VBoxContainer/Credits" to="." method="_on_credits_focus_entered"]
[connection signal="mouse_entered" from="Menu/Canvas/VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="Menu/Canvas/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="Menu/Canvas/VBoxContainer/Exit" to="." method="_on_exit_focus_entered"]
[connection signal="mouse_entered" from="Menu/Canvas/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="Menu/Canvas/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
